fix entry overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,7 +69,7 @@ h3 {
   left: 15%;
   width: 100%;
   height: 100%;
-  margin-left: 1px;
+  overflow: scroll;
 }
 
 #main-content {
@@ -77,4 +77,5 @@ h3 {
   width: inherit;
   height: inherit;
   margin-top: 1px;
+  text-align: center;
 }
